compiler/tests/success/x86-64/bswap.jazz
export
fn f(reg u32 a) -> reg u32 {
  reg u32 b, c;
  b = a;
  c = #BSWAP_32(b);
  return c;
}

export
fn g(reg u64 p) {
  reg u64 a, b;
  a = [p + 0];
  b = #BSWAP(a);
  [p + 8] = b;
}
