compiler/tests/fail/register_allocation/risc-v/force_regalloc_dup.jazz
export fn main(reg u32 a) -> reg u32 {
  #[force_regalloc=x18, force_regalloc=x19] reg u32 x;
  reg u32 r;
  x = 1;
  x += a;
  r = x;
  return r;
}
